# EvoSeg

./: .gitignore  CMakeLists.txt  README.md  post_process_shrink.py
EvoSeg/: CMakeLists.txt  EvoSeg.py
EvoSeg/EvoSegLib/: EvoSegModels.py  EvoSegSettingsPanel.py  __init__.py  data.py  modify_total_nnunet.py  modify_total_python_api.py  nnunetv2_inference.py  post_process.py  post_process_shrink.py  resampling.py  task.py  utils.py
EvoSeg/OtherCode/: display.py  main.py
EvoSeg/OtherCode/demo data/: Selected segmentation.nrrd  airway_vessel.nrrd  artery_vein.nrrd
EvoSeg/Resources/: AnatomicRegionAndModifier-EvoSeg.term.json  AppConfig.json  Models.json  SegmentationCategoryTypeModifier-EvoSeg.term.json
EvoSeg/Resources/UI/: EvoSeg.ui
EvoSeg/Scripts/: data.py  nnunetv2_inference.py  nnunetv2_inference.py.bak
SuperBuild/: External_EvoSeg.cmake  External_python-EvoSeg.cmake
